--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ p {
   font-weight: 400;
 }
 
+.svgText {
+  font-size: 0.75rem;
+  pointer-events: none;
+}
+
 .mainContainer {
   height: 100vh;
   width: 100%;
